--- a/index.html
+++ b/index.html
@@ -6,34 +6,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bernardo Porto - DoWhlie 2021</title>
-    <style>
-        html,
-        body {
-            height: 100%;
-
-        }
-
-        body {
-            display: grid;
-            /*Added itens to center*/
-            place-items: center;
-            /*change background color*/
-            background: lightblue;
-        }
-
-        h1 {
-            /*This's a example CSS's comment*/
-            font-size: 1.5rem;
-        }
-    </style>
+    <!--rel is relation, href is where relation is-->
+    <link rel="stylesheet" href="style.css" />
+    <!--google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <!--this's a example HTML's comment -->
-    <!--Title in body, you can see this-->
-    <h1>Bernardo Porto</h1>
-    <!--Link to anything-->
-    <a href="https://github.com/BEp0/">@BEp0</a>
+    <main>
+        <div class="container">
+            <div class="avatar">
+                <span>
+                    <img src="images/build.svg" alt="stamp RocketSeat">
+                </span>
+                <img src="https://avatars.githubusercontent.com/u/72446326?v=4" alt="Personal photo">
+                <!--
+                    <img src="https://lorempixel.com/185/185/people/" alt=""> // random images
+                -->
+            </div>
+            <h1>Bernardo Porto</h1>
+            <a href="https://github.com/BEp0/" target="_blank">
+                <img src="images/github.svg" alt="github icon">
+                BEp0
+            </a>
+            <p>An instructor focused on helping pople start programming for web</p>
+            <ul>
+                <li>
+                    <a href="https://www.youtube.com/" target="_blank">
+                        <img src="images/youtube.svg" alt="youtube icon">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <img src="images/intagram.svg" alt="instagram icon">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <img src="images/facebook.svg" alt="facebook icon">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/" target="_blank">
+                        <img src="images/twitter.svg" alt="twitter icon">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </main>
 </body>
 
 </html>
