--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bernardo Porto - DoWhlie 2021</title>
+    <title>Bernardo Souza - DoWhlie 2021</title>
     <!--rel is relation, href is where relation is-->
     <link rel="stylesheet" href="style.css" />
     <!--google fonts-->
